Updated diagnosis key generation & storage, delete batches after sucessful download, flyway update