@@ -37,6 +37,7 @@ import java.time.OffsetDateTime;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import app.coronawarn.server.common.protocols.external.exposurenotification.VerificationType;
 import org.assertj.core.util.Lists;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -141,7 +142,8 @@ class DiagnosisKeyServiceTest {
   @Test
   void testShouldNotDeleteKeysFromAnotherCountry() {
     var expKeys = List.of(
-        buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(1L), "DE", Collections.singletonList("DE")));
+        buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(1L), "DE", Collections.singletonList("DE"),
+            VerificationType.LAB_VERIFIED));
 
     diagnosisKeyService.saveDiagnosisKeys(expKeys);
     diagnosisKeyService.applyRetentionPolicy(1, "FR");
@@ -152,8 +154,8 @@ class DiagnosisKeyServiceTest {
 
   @Test
   void testShouldDeleteKeysWithMatchingVisitedCountry() {
-    var frenchKeys = buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(1L), "DE", Collections.singletonList("FR"));
-    var germanKeys = buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(2L), "DE", Collections.singletonList("DE"));
+    var frenchKeys = buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(1L), "DE", Collections.singletonList("FR"), VerificationType.LAB_VERIFIED);
+    var germanKeys = buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(2L), "DE", Collections.singletonList("DE"), VerificationType.LAB_VERIFIED);
 
     diagnosisKeyService.saveDiagnosisKeys(List.of(germanKeys, frenchKeys));
     diagnosisKeyService.applyRetentionPolicy(1, "FR");
@@ -165,7 +167,7 @@ class DiagnosisKeyServiceTest {
   @Test
   void testShouldDeleteKeysWhereAnyOfVisitedCountriesMatch() {
     var keys = List.of(
-        buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(1L), "DE", List.of("DE", "FR", "LU")));
+        buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(1L), "DE", List.of("DE", "FR", "LU"), VerificationType.LAB_VERIFIED));
     diagnosisKeyService.saveDiagnosisKeys(keys);
     diagnosisKeyService.applyRetentionPolicy(1, "FR");
     var actKeys = diagnosisKeyService.getDiagnosisKeys();
@@ -175,9 +177,9 @@ class DiagnosisKeyServiceTest {
   @Test
   void testShouldDeleteKeysFromDifferentOriginCountriesWithMatchingVisitedCountry() {
     var keys = List.of(
-        buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(1L), "DE", List.of("FR")),
-        buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(1L), "FR", List.of("FR")),
-        buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(1L), "LU", List.of("FR")));
+        buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(1L), "DE", List.of("FR"), VerificationType.LAB_VERIFIED),
+        buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(1L), "FR", List.of("FR"),VerificationType.LAB_VERIFIED),
+        buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(1L), "LU", List.of("FR"), VerificationType.LAB_VERIFIED));
     diagnosisKeyService.saveDiagnosisKeys(keys);
     diagnosisKeyService.applyRetentionPolicy(1, "FR");
     var actKeys = diagnosisKeyService.getDiagnosisKeys();
@@ -193,7 +195,9 @@ class DiagnosisKeyServiceTest {
           .withTransmissionRiskLevel(2)
           .withCountryCode("DE")
           .withVisitedCountries(Collections.singletonList("DE"))
-          .withSubmissionTimestamp(0L).build());
+          .withSubmissionTimestamp(0L)
+          .withVerificationType(VerificationType.LAB_VERIFIED)
+          .build());
 
       diagnosisKeyService.saveDiagnosisKeys(keys);
     })).isInstanceOf(InvalidDiagnosisKeyException.class);
@@ -212,14 +216,18 @@ class DiagnosisKeyServiceTest {
             .withTransmissionRiskLevel(2)
             .withCountryCode("DE")
             .withVisitedCountries(Collections.singletonList("DE"))
-            .withSubmissionTimestamp(0L).build(),
+            .withSubmissionTimestamp(0L)
+            .withVerificationType(VerificationType.LAB_VERIFIED)
+            .build(),
         DiagnosisKey.builder()
             .withKeyData(keyData.getBytes())
             .withRollingStartIntervalNumber(600)
             .withTransmissionRiskLevel(3)
             .withCountryCode("DE")
             .withVisitedCountries(Collections.singletonList("DE"))
-            .withSubmissionTimestamp(0L).build());
+            .withSubmissionTimestamp(0L)
+            .withVerificationType(VerificationType.LAB_VERIFIED)
+            .build());
 
     diagnosisKeyService.saveDiagnosisKeys(keys);
 
@@ -240,9 +248,9 @@ class DiagnosisKeyServiceTest {
     @BeforeEach
     public void setup() {
       var keys = List.of(
-          buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(1L), "DE", Collections.singletonList("DE")),
-          buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(2L), "DE", List.of("DE", "FR")),
-          buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(3L), "DE", List.of("DE", "FR", "DK"))
+          buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(1L), "DE", Collections.singletonList("DE"),VerificationType.LAB_VERIFIED),
+          buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(2L), "DE", List.of("DE", "FR"),VerificationType.LAB_VERIFIED),
+          buildDiagnosisKeyForDateTime(OffsetDateTime.now(UTC).minusDays(3L), "DE", List.of("DE", "FR", "DK"),VerificationType.LAB_VERIFIED)
       );
       diagnosisKeyService.saveDiagnosisKeys(keys);
     }
